# seqft-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build  todo.md
src/: common.c  common.h  evaluator.c  evaluator.h  main.c  stack.c  stack.h  tokenizer.c  tokenizer.h  tokent_t.c  tokent_t.h  visualizer.c  visualizer.h
